<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alice_blue"
    android:orientation="vertical"
    tools:context="com.nithishgajula.easymarkdown.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/about_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rich_electric_blue">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/rich_electric_blue"
            android:elevation="1dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/arrow_back_24"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="About"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/about_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="20dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/about_app_name_2l"
            android:textColor="#0e86d4"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/app_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:textColor="@color/gunmetal"
            android:textSize="15sp" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="5dp"
            android:background="@color/dim_gray" />

        <TextView
            android:id="@+id/developer_info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/roboto_slab_light"
            android:text="@string/about_developer"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/developer_site_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/roboto_slab_light"
            android:text="@string/about_site_developer"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gmail_img_id"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/about_gmail_icon"
                android:src="@drawable/ic_gmail_16" />

            <ImageView
                android:id="@+id/github_img_id"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/about_github_icon"
                android:src="@drawable/ic_github_16" />

            <ImageView
                android:id="@+id/instagram_img_id"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/about_instagram_icon"
                android:src="@drawable/ic_instagram_16" />

            <ImageView
                android:id="@+id/linkedin_img_id"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/about_linkedin_icon"
                android:src="@drawable/ic_linkedin_16" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>